# QR_postcards

./: .gitignore  README.md
.github/workflows/: cmake.yml
Example/: Makefile  main.cpp
OpenGL/: Makefile  README.md
OpenGL/include/: Background.hpp  Camera.hpp  Glifs.hpp  Mesh.hpp  Model.hpp  Object.hpp  Object_OpenGL.hpp  Shader.hpp  Texture.hpp  Update_screen.hpp  Window.hpp
OpenGL/include/freetype-2.13.0/: CMakeCache.txt
OpenGL/include/glad/: glad.h
OpenGL/objects/Christmas_tree/: Tree.mtl
OpenGL/objects/gift/: gift.mtl
OpenGL/src/: Makefile  glad.c  ma_card.txt  main.cpp  postcard.cpp
OpenGL/src/Shaders/: light_shader.frag  light_shader.vs  model_tree.fs  model_tree.vs  shader.frag  shader.vs  simple_shader.frag  simple_shader.vs  tex_shader.frag  tex_shader.vs  text_shader.frag  text_shader.vs
Reader/: CMakeLists.txt  Creator.hpp  Makefile  Objects.hpp  Parser.hpp  Tokenizer.cpp  Tokenizer.hpp  Tokens.hpp  reader_main.cpp
Reader/include/: Creator.hpp  EnumPrinter.hpp  MaPrinter.hpp  MaPrinter_traits.hpp  Objects.hpp  Parser.hpp  TestObjects.hpp  TextProcessExceptions.hpp  TextProcessor.hpp  Tokenizer.hpp  Tokens.hpp
Reader/src/: MaPrinter.cpp  Tokenizer.cpp  reader_main.cpp  test_reader.cpp
Reader/tests/: 1_one_object.txt  2_many_objects.txt  3_lex_error.txt  4_syntax_error.txt  5_congrats.txt
